--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "moneyphp/money": "^4.1",
+        "psr/simple-cache": "2.0",
         "tecnickcom/tcpdf": "^6.6"
     },
     "require-dev": {
